<resources>
    <string name="app_name">Pet_Go</string>
    <string name="id">Email</string>
    <string name="password">密码</string>
    <string name="login">登录</string>



    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="pet_sex">
        <item>公</item>
        <item>母</item>
    </string-array>

    <string-array name="pet_type">
        <item>狗</item>
        <item>猫</item>
        <item>鸟</item>
        <item>貂</item>
        <item>鼠</item>
    </string-array>




    <string name="find">发现</string>
    <string name="zone">秀宠圈</string>
    <string name="mine">我的</string>
    <string name="title0">萌宠世界</string>
    <string name="hello_blank_fragment">hi</string>
    <string name="pickout">筛选</string>
    <string name="petinfo">萌宠信息</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="pick0">请选择宠物种类</string>
    <string name="pick1">请选择宠物品种</string>
    <string name="pick2">请选择宠物性别</string>
</resources>
